bougainville-server.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bougain-serv-ingress
  labels:
    app: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  namespace: default
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bgs-service
            port: 
              number: 5000
